cm4all-workshop (2.0.20) unstable; urgency=low

  * logger: fix log level

 --   

cm4all-workshop (2.0.19) unstable; urgency=low

  * translation: add packet FORBID_MULTICAST
  * spawn: system call filter errors are fatal if explicitly enabled
  * spawn: apply cgroup namespace again after moving to new cgroup
  * doc: more "cronjobs" table documentation
  * doc: document the "cronresults" table

 -- Max Kellermann <mk@cm4all.com>  Fri, 14 Jul 2017 08:25:32 -0000

cm4all-workshop (2.0.18) unstable; urgency=low

  * translation: add packet CGROUP_NAMESPACE
  * translation: allow underscore in cgroup controller name
  * workshop: ignore jobs with scheduled_time more than 1 year future

 -- Max Kellermann <mk@cm4all.com>  Fri, 07 Jul 2017 12:49:20 -0000

cm4all-workshop (2.0.17) unstable; urgency=low

  * spawn: create STDERR_PATH with mode 0600
  * spawn: fix socket family filter
  * translation: add packets UMASK, STDERR_PATH_JAILED

 -- Max Kellermann <mk@cm4all.com>  Tue, 04 Jul 2017 16:36:07 -0000

cm4all-workshop (2.0.16) unstable; urgency=low

  * spawn: abort the process immediately after uid/gid_map failure
  * workshop: create a per-plan cgroup only if cgroups are available
  * improved log message after job start error

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Jun 2017 13:33:01 -0000

cm4all-workshop (2.0.15) unstable; urgency=low

  * spawn: fix user namespace bug
  * spawn: fix seccomp filters on old kernels
  * spawn: fix journal for jailed processes
  * spawn: allow only local, IPv4 and IPv6 sockets
  * spawn: rename the PID namespace init process to "init"

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Jun 2017 07:07:46 -0000

cm4all-workshop (2.0.14) unstable; urgency=low

  * spawn: mount a new /proc for the PID namespace
  * spawn: implement an init process for PID namespaces
  * spawn: allow using user namespaces
  * spawn: switch to a new systemd scope, enabling cgroup management
  * workshop: fix plan uid/gid verification