@@ -1,6 +1,7 @@
 cm4all-workshop (2.0.20) unstable; urgency=low
 
   * logger: fix log level
+  * workshop: don't strip newlines from "log" column
 
  --   
 
